--- a/blog/templates/blog/base2.html
+++ b/blog/templates/blog/base2.html
@@ -17,9 +17,9 @@
                 </div>
                 <div class="col-md-4 text-right">
                     {% if user.is_authenticated %}
-                        <a class = "nav-item nav-link" href = "{% url 'profile' %}"> Profile</a>
-                        <a href="{% url 'post_new' %}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> Write New Post</a>
-                        <a href="{% url 'logout' %}" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                        <a class = "nav-item nav-link" href = "{% url 'profile' %}"> 프로필 </a>
+                        <a href="{% url 'post_new' %}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> 게시물 작성하기 </a>
+                        <a href="{% url 'logout' %}" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-log-out"></span> 로그아웃 </a>
                     {% else %}
                         <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Login</a>
                         <a href="{% url 'signup' %}" class="btn btn-success btn-lg">Sign Up</a>
